tmp_remove_task.txt
node : file:///C:/Users/Administrator/Desktop/GFA/[eval1]:1
所在位置 行:1 字符: 1
+ node -e "import{PrismaClient}from'@prisma/client';const p=new PrismaC ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (file:///C:/User...p/GFA/[eval1]:1 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
import{PrismaClient}from'@prisma/client';const p=new PrismaClient();(async()=>{
const tasks=await p.task.findMany({where:{type:'REMOVE_MEMBER',OR:[{payload:{co
ntains:'aa01093631849'}},{payload:{contains:'aa01084287993'}}],createdAt:{gte:n
ew Date('2026-04-18T00:00:00Z'),lte:new Date('2026-04-18T23:59:59Z')}},include:
{logs:{orderBy:{createdAt:'desc'},take:20},account:{select:{loginEmail:true}},f
amilyGroup:{select:{groupName:true}},order:{select:{orderNo:true,userEmail:true
}}},orderBy:{createdAt:'desc'}});console.log(JSON.stringify(tasks,null,2));awai
t p.\()})().catch(async e=>{console.error(e);await p.\()})
                                                                               
                                                                               
                                                                               
                                                                               
                                                                               
                                                                               
                                                                               
    ^

Expected ident

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.createModuleWrap (node:internal/modules/esm/loader:253:12)
    at node:internal/process/execution:321:29
    at asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:11)
    at Object.runEntryPointWithESMLoader (node:internal/modules/run_main:123:19
)
    at evalTypeScriptModuleEntryPoint (node:internal/process/execution:315:47)
    at evalTypeScript (node:internal/process/execution:253:12)
    at node:internal/main/eval_string:71:3

Node.js v24.14.1
